Fix new cookie z-index bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -84,6 +84,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  z-index: 99999;
   @media (max-width: 800px) {
     bottom: 5px;
   }
